# MindEvolve2

./: .env.template  .gitignore  README.md  USAGE.md  eval.py  evaluator_worker.py  main.py  mypy.ini  pyproject.toml  server.py
.claude_code/1760620470_calculator_001/: .calculator.py.swp  calculator.py
api/: __init__.py  interface_anthropic.py  interface_litellm.py  interface_openai.py
core/base/: __init__.py  config.py  evaluator.py  plugin.py
core/dictator_game/: config.yaml  evaluator.py  plugin.py
core/trust_game/: __init__.py  bic_calculator.py  config.yaml  evaluator.py  evaluator_full.py  model_tester.py  plugin.py  reviewers.py  score_extractors.py  utils.py
docs/: CLAUDE_AGENT_README.md  multi_llm_support.md
evolution/: __init__.py  agent.py  client.py  config.py  main.py  program_library.py  ssh.py
evolution/test/: config.yaml  config_anthropic_example.yaml  config_claude_code_example.yaml  config_litellm_example.yaml  config_openai_example.yaml  config_test.yaml  dictatorgame_config_full.yaml  dictatorgame_config_test.yaml  trustgame_config_full.yaml  trustgame_config_test.yaml  trustgame_config_test_by_claude_code.yaml
test/: example_claude_agent_usage.py  test_api.py  test_bic_simple.py  test_claude_agent.py  test_client.py  test_config_loading.py  test_coreconfig.py  test_evolution_llm.py  test_extract_code.py  test_plugin.py  test_ssh.py
test/test_api/: test_anthropic_api.py  test_litellm_api.py  test_openai_api.py
test/test_evaluate/: test.py
test/test_module_load/: my_model.py  test_model.py
utils/: cache_manager.py
(+8 files in other folders)
